cmake_minimum_required(VERSION 3.28)

project(raptor_workspace)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED true)
set(CMAKE_POSITION_INDEPENDENT_CODE true)

string(TOLOWER ${CMAKE_SYSTEM_NAME} SYSTEM_NAME_LC)
string(TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE_LC)
set(CONFIG_NAME "${SYSTEM_NAME_LC}.${BUILD_TYPE_LC}.${CMAKE_SYSTEM_PROCESSOR}")
set(CMAKE_BINARY_DIR "${CMAKE_BINARY_DIR}/${CONFIG_NAME}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")

include(FetchContent)
set(FETCHCONTENT_BASE_DIR "${CMAKE_BINARY_DIR}/_deps")

add_subdirectory(gdextension "${CMAKE_BINARY_DIR}/gdextension")
add_subdirectory(raptor "${CMAKE_BINARY_DIR}/raptor")
